fix: Update error message colors for improved visibility and consistency

--- a/content/style.css
+++ b/content/style.css
@@ -142,7 +142,7 @@ textarea {
 }
 
 form .error {
-  color: #c12626;
+  color: #d8368d;
   margin-bottom: 16px;
 }
 
@@ -151,7 +151,7 @@ form .error {
   background-size: cover;
   font-size: 5vw;
   padding: 8% 4%;
-  color: #555;
+  color: #e445a5;
   display: flex;
   flex-direction: column;
   justify-content: center;
